Bug 54860 - FORMATTING: Indentation handles on horizontal ruler sometimes stuck in "Print Layout"
Summary: FORMATTING: Indentation handles on horizontal ruler sometimes stuck in "Print...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.1.2 release
Hardware: All Linux (All)
: low minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-13 11:07 UTC by delcypher
Modified: 2016-09-23 13:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
File that exposes bug behaviour. (19.50 KB, application/msword)
2012-09-13 11:07 UTC, delcypher
Details
doc file that shows handles working (10.50 KB, application/msword)
2013-03-06 18:03 UTC, Brenda Granados
Details

Note You need to log in before you can comment on or make changes to this bug.
Description delcypher 2012-09-13 11:07:16 UTC
Created attachment 67098 [details]
File that exposes bug behaviour.

Steps to reproduce
1. Open attached document (MS word 2003 document)
2. Place cursor in the table cell with line beginning "Subjects studied include:" (row 7, column 2)
3. Select View > Print Layout
4. Try to change that paragraph's indentation by grabbing the indentation handles on the horizontal ruler and moving them.

Problem:
The indentation handles on the ruler are stuck and cannot be moved.

Additional observations:
1. If you switch to "View > Web layout" it is then possible to move the indent handles.
2. If parts of the document are deleted in "Print Layout" then it sometimes becomes possible to move the indent handles.
Comment 1 A (Andy) 2013-02-23 22:27:32 UTC
not reproducible with LO 4.0.0.3 (Win7 Home, 64bit)

Does this issue still persist for you with the latest release of LibreOffice?

Can anybody else confirm this behavior?
Comment 2 Brenda Granados 2013-02-28 18:39:56 UTC
Hi, I also tested this and it works for me. I'm able to drag the table indentation horizontally and vertically in Print Layout mode.

Version: 4.0.1.0+
Platform: Ubuntu Linux 12.04 x64

Because of this I'm marking the bug as WFM. If it's still an issue for you please provide any additional helpful information and reopen the bug as UNCONFIRMED
Comment 3 delcypher 2013-02-28 21:48:29 UTC
I've checked again this bug is still present in
LibreOffice 3.6.5.2 (my distro ArchLinux hasn't upgraded to 4.0 yet)

I'll build 4.0 from source and report back.
Comment 4 delcypher 2013-03-01 23:23:41 UTC
I have built from git tag libreoffice-4.0.1.2 (84102822e3d61eb989ddd325abf1ac0779049857)

The bug is still present.

@Brenda Granados : Did you move the table column separator or the paragraph indent handles? I can adjust the table column width from the horizontal ruler but not the paragraph indent handles of the paragraph in the cell mentioned in my original bug report.
Comment 5 Joel Madero 2013-03-04 17:53:13 UTC
Please do not update version field, it reflects the OLDEST release that we see the problem. 

We use comments to say the problem still exists in newer version.
Comment 6 Brenda Granados 2013-03-06 15:45:47 UTC
Hi, I did confirm that there is a bug going on, though I'm not sure what makes this particular document unique. 

I created a test document using 4.0.2.0+ on Ubuntu 12.04 with a table that contained 2 rows and two columns. I am able to use the indentation handles at the top to adjust the paragraph indent in either column in my new created test document, even after saving and reopening as a .doc. When I open the document attached to this bug report, I can not move the handles. I checked to make sure no cell protections were on for the table as well, by highlighting a cell, right click, and make sure protect is not checked.

I will attach my working document.

Version: 4.0.2.0+ (Build ID: e91fa6040b097f7e3e23d32a31eb832ca236050)
Platform: Ubuntu Linux x64

-------------------------------

LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link: https://wiki.documentfoundation.org/QA/BugTriage  There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists
Comment 7 delcypher 2013-03-06 16:03:29 UTC
Yay. You managed to reproduce my bug.

The file was originaly created with Microsoft Office Word 2003 a rather long time ago. Something is special about the file because I tried creating a MS word 2003 document in LibreOffice before reporting the bug and like you couldn't trigger the bug using files created by LibreOffice.

Something very weird that I noticed is that if you delete some text from the document I uploaded sometimes the paragraph indent handles become movable again.
Comment 8 Brenda Granados 2013-03-06 18:03:16 UTC
Created attachment 76036 [details]
doc file that shows handles working
Comment 9 QA Administrators 2015-02-19 15:50:38 UTC Comment hidden (obsolete)
Comment 10 Buovjaga 2015-03-08 20:03:52 UTC
Confirmed with attachment 67098 [details].

Win 7 Pro 64-bit, LibO Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Locale: fi_FI
Comment 11 Joel Madero 2015-03-11 18:23:05 UTC
Prioritizing:
*Please do not adjust the priority without consulting QA on the mailing list or in the chat room http://webchat.freenode.net/?channels=libreoffice-qa

Priorities are set per this chart: https://wiki.documentfoundation.org/File:Prioritizing_Bugs_Flowchart.jpg


Minor - will not prevent high quality work but can slow you down;
Low - unless we have a reason to think this is a regression, the workaround is pretty straight forward so default is appropriate.
Comment 12 tommy27 2016-04-16 07:24:03 UTC Comment hidden (obsolete)
Comment 13 Commit Notification 2016-09-18 08:52:32 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=17d7ac5c1a06d29cbeeb3efd245ebf2e6725da12

tdf#54860 make indention handles on the ruler movable inside the table.

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.