tdf#54860 make indention handles on the ruler movable inside the table.

Handle of the ruler is disabled when the last row of the table is split
across pages. ( i.e. SwTabCols.bLastRowAllowedToChange is true,
which is implied by SwTabFrame.m_bHasFollowFlowLine. )

m_bHasFollowFlowLine may restrict frame to grow its height in
SwRowFrame::GrowFrame(), but SvxProtectItem affects horizontal ruler,
so I removed it and it seems not harmful.

Change-Id: I519dead13c7124449bc39ed5eb9af38d235eec25
Reviewed-on: https://gerrit.libreoffice.org/28431
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mark Hung <marklh9@gmail.com>